Fix election name not showing on scroll

--- a/src/sass/components/_ballot.scss
+++ b/src/sass/components/_ballot.scss
@@ -58,7 +58,7 @@ $margin-zero: 0;
       top: $space-none;
       left: $space-none;
       right: $space-none;
-      z-index: 3;
+      z-index: 6 !important;
       transform: $unpinned-transform;
       transition: all 100ms ease-in-out 0s;
     }
